fix(deploy): Use dynamic PORT environment variable for Render

--- a/client/index.html
+++ b/client/index.html
@@ -550,7 +550,7 @@
     
     <script>
         // Initialize the connection to the server
-        const socket = io('http://localhost:3000'); 
+        const socket = io(); 
         
         // DOM references
         const form = document.getElementById('form');
